background and footer scaling works. content should no longer go behind the footer

--- a/src/components/Frontpage.css
+++ b/src/components/Frontpage.css
@@ -4,17 +4,30 @@
 .background {
     background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url('img/bg.jpeg') center/cover no-repeat;
     width: 100%;
-    height: 100vh;
-    position: relative;
+    height: 100%;
+    min-height: 100vh;
+    position: sticky;
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
   }
 
-
+.content {
+    position: relative;
+    height: 100%;
+    box-sizing: content-box;
+}
 .text-container{
     text-align:center;
     width: 90%;
     margin: auto;
+    margin-bottom: 2%;
     height: 50%;
     color: white;
+    position: relative;
+    overflow-y: auto;
+    -webkit-overflow-scrolling: touch;
+    box-sizing: content-box;
 }
 .textblock{
     font-family: "Quicksand", sans-serif;
