--- a/src/components/footer.css
+++ b/src/components/footer.css
@@ -4,13 +4,15 @@
     align-items: center; /* This will vertically center the content */
     background-color: #201C24;
     border-top: 2px solid #201C24;
-    position: fixed;
+    position: relative;
     width: 100%;
-    height: 100px;
-    padding: 20px;
+    height: 100%;
+    padding: 2%;
     bottom: 0;
+    margin-top: auto;
     color: white;
     font-size:20px;
+    box-sizing: border-box;
 }
 
 .footer p {
